Fixes misalignment of edit and trashbin buttons on list items

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -217,7 +217,7 @@ li {
 }
 
 form {
-    margin: 5px 2px 0 2px;
+    margin: 0 2px;
 }
 
 .form-container {
